# nova-lang

./: .gitignore  AI_HANDOFF.md  LICENSE  NOVA_MIGRATION_PROMPT.md  NOVA_TokenSpec_v0.1.docx  plan.md  readme.md
compiler/: CMakeLists.txt  Cargo.toml  Makefile
compiler/codegen/src/: ast_bridge.rs  ir_emitter.rs  lib.rs
compiler/interface_validator/: pom.xml
compiler/interface_validator/src/main/java/com/novaai/compiler/ast/: InterfaceDeclaration.java  MissionSignature.java  StructDeclaration.java  StructField.java
compiler/interface_validator/src/main/java/com/novaai/compiler/validation/: InterfaceValidator.java  ValidationError.java
compiler/interface_validator/src/test/java/com/novaai/compiler/validation/: InterfaceValidatorStandaloneTest.java  InterfaceValidatorTest.java
compiler/lexer/: CMakeLists.txt  Makefile
compiler/lexer/include/: lexer.h  token.h
compiler/lexer/src/: lexer.c  token.c
compiler/lexer/tests/: test_lexer.c
compiler/parser/: Makefile
compiler/parser/include/: ast.h  parser.h
compiler/parser/src/: ast.c  parser.c
compiler/parser/tests/: test_parser.c
compiler/semantic/: Cargo.toml
compiler/semantic/src/: lib.rs  lifetime.rs  scope.rs
compiler/semantic/tests/: test_semantic.rs
docs/: language_traits_typesystem.md
examples/cli_tool/: main.nv
examples/cosmo_transformer/: main.nv
examples/delta_v/: main.nv
examples/hello_universe/: main.nv
examples/hubble_constant/: main.nv
examples/stellar_main_sequence/: main.nv
examples/web_server/: main.nv
stdlib/cosmos/: __init__.py
stdlib/cosmos/astro/: __init__.py
tests/fixtures/invalid/: type_error.nv  unit_mismatch.nv
tests/fixtures/valid/: hello.nv
toolchain/nova_repl/: repl.py
