[package]
name        = "nova_semantic"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
nova_unit_resolver = { path = "../unit_resolver" }
nova_typechecker   = { path = "../typechecker" }
